--- a/src/index.html
+++ b/src/index.html
@@ -9,13 +9,12 @@
 <body>
     <header>
         <h1>Welcome to the Frontend Intern Training Project</h1>
-        <h2>-== UNDER CONSTRUCTION ==-</h2>
     </header>
 
     <main>
         <section>
             <h3>See training tasks bellow:</h3>
-            <article>
+            <article style="width: 50%; display: inline-block; vertical-align: top;">
                 <h4>Task 1:</h4>
                 <p>Create the following webpage template only defining the most basic element containers and required styles</p>
                 <p>Add your <code>HTML</code> code in <code>src/views/task1.html</code></p>
@@ -23,9 +22,15 @@
 
 
 
-                <img src="../Tasks/Task_1/Task1_Mockup.png" alt="">
+                <img src="../Tasks/Task_1/Task1_Mockup.png" alt="" style="width: 320px; height: auto;">
                 <p>To view your page click the link bellow</p>
                 <a style="display: block;" href="/views/task1.html">Click Here</a>
+            </article>
+            <article style="width: 49%; display: inline-block; vertical-align: top;">
+                <h4>Task 2:</h4>
+                <p>Fulfil the described task in <code>/Tasks/Task_2/Task_2_Requirements.md</code></p>
+                <p>Write your code in <code>/src/scripts/tasks/task2.js</code></p>
+                <p>To view your console output open developer tools with F12 and choose tab "Console"</p>
             </article>
         </section>
     </main>
