Added Task 3 to homepage

--- a/src/index.html
+++ b/src/index.html
@@ -22,15 +22,23 @@
 
 
 
-                <img src="../Tasks/Task_1/Task1_Mockup.png" alt="" style="width: 320px; height: auto;">
+                <img src="../Tasks/Task_1/Task1_Mockup.png" alt="" style="width: 20%; height: auto;">
                 <p>To view your page click the link bellow</p>
                 <a style="display: block;" href="/views/task1.html">Click Here</a>
             </article>
             <article style="width: 49%; display: inline-block; vertical-align: top;">
-                <h4>Task 2:</h4>
-                <p>Fulfil the described task in <code>/Tasks/Task_2/Task_2_Requirements.md</code></p>
-                <p>Write your code in <code>/src/scripts/tasks/task2.js</code></p>
-                <p>To view your console output open developer tools with F12 and choose tab "Console"</p>
+                <section style="margin-bottom: 30px;">
+                    <h4>Task 2:</h4>
+                    <p>Fulfil the described task in <code>/Tasks/Task_2/Task_2_Requirements.md</code></p>
+                    <p>Write your code in <code>/src/scripts/tasks/task2.js</code></p>
+                    <p>To view your console output open developer tools with F12 and choose tab "Console"</p>
+                </section>
+                <section>
+                    <h4>Task 3:</h4>
+                    <p>Fulfil the described task in <code>/Tasks/Task_3/Task_3_Requirements.md</code></p>
+                    <p>Write your code in <code>/src/scripts/tasks/task3.js</code></p>
+                    <p>To view your console output open developer tools with F12 and choose tab "Console"</p>
+                </section>
             </article>
         </section>
     </main>
