Added Sass normalize css, sass components, helpers and home styling. Reworked homepage structure

--- a/src/index.html
+++ b/src/index.html
@@ -11,34 +11,36 @@
         <h1>Welcome to the Frontend Intern Training Project</h1>
     </header>
 
-    <main>
-        <section>
-            <h3>See training tasks bellow:</h3>
-            <article style="width: 50%; display: inline-block; vertical-align: top;">
+    <main class="homepage">
+        <h2>Training Tasks:</h2>
+
+        <section class="col-md-6">
+            <article class="task-wrapper">
                 <h4>Task 1:</h4>
-                <p>Create the following webpage template only defining the most basic element containers and required styles</p>
+                <p>Create the following webpage template only defining the most basic element containers and
+                    required styles</p>
                 <p>Add your <code>HTML</code> code in <code>src/views/task1.html</code></p>
                 <p>Your <code>CSS/Sass</code> in <code>src/styles/views/task1.scss</code></p>
-
 
 
                 <img src="../Tasks/Task_1/Task1_Mockup.png" alt="" style="width: 20%; height: auto;">
                 <p>To view your page click the link bellow</p>
                 <a style="display: block;" href="/views/task1.html">Click Here</a>
             </article>
-            <article style="width: 49%; display: inline-block; vertical-align: top;">
-                <section style="margin-bottom: 30px;">
-                    <h4>Task 2:</h4>
-                    <p>Fulfil the described task in <code>/Tasks/Task_2/Task_2_Requirements.md</code></p>
-                    <p>Write your code in <code>/src/scripts/tasks/task2.js</code></p>
-                    <p>To view your console output open developer tools with F12 and choose tab "Console"</p>
-                </section>
-                <section>
-                    <h4>Task 3:</h4>
-                    <p>Fulfil the described task in <code>/Tasks/Task_3/Task_3_Requirements.md</code></p>
-                    <p>Write your code in <code>/src/scripts/tasks/task3.js</code></p>
-                    <p>To view your console output open developer tools with F12 and choose tab "Console"</p>
-                </section>
+        </section>
+
+        <section class="col-md-6">
+            <article class="task-wrapper">
+                <h4>Task 2:</h4>
+                <p>Fulfil the described task in <code>/Tasks/Task_2/Task_2_Requirements.md</code></p>
+                <p>Write your code in <code>/src/scripts/tasks/task2.js</code></p>
+                <p>To view your console output open developer tools with F12 and choose tab "Console"</p>
+            </article>
+            <article class="task-wrapper">
+                <h4>Task 3:</h4>
+                <p>Fulfil the described task in <code>/Tasks/Task_3/Task_3_Requirements.md</code></p>
+                <p>Write your code in <code>/src/scripts/tasks/task3.js</code></p>
+                <p>To view your console output open developer tools with F12 and choose tab "Console"</p>
             </article>
         </section>
     </main>
