Adding Task 4 Requirements

--- a/src/index.html
+++ b/src/index.html
@@ -14,35 +14,60 @@
     <main class="homepage">
         <h2>Training Tasks:</h2>
 
-        <section class="col-md-6">
-            <article class="task-wrapper">
-                <h4>Task 1:</h4>
-                <p>Create the following webpage template only defining the most basic element containers and
-                    required styles</p>
-                <p>Add your <code>HTML</code> code in <code>src/views/task1.html</code></p>
-                <p>Your <code>CSS/Sass</code> in <code>src/styles/views/task1.scss</code></p>
+        <div class="row">
+            <section class="col-md-6">
+                <article class="task-wrapper">
+                    <h4>Task 1:</h4>
+                    <p>Create the following webpage template only defining the most basic element containers and
+                        required styles</p>
+                    <ul>
+                        <li>
+                            <p>See wireframes in <code>~/Tasks/Task_1/Task1_Mockup.png</code></p>
+                        </li>
+                        <li>
+                            <p>Add your <code>HTML</code> code in <code>src/views/task1.html</code></p>
+                        </li>
+                        <li>
+                            <p>Your <code>CSS/Sass</code> in <code>src/styles/views/task1.scss</code></p>
+                        </li>
+                    </ul>
 
+                    <p class="view-page">
+                        To view your page
+                        <a href="/views/task1.html">click here</a>
+                    </p>
+                </article>
+            </section>
 
-                <img src="../Tasks/Task_1/Task1_Mockup.png" alt="" style="width: 20%; height: auto;">
-                <p>To view your page click the link bellow</p>
-                <a style="display: block;" href="/views/task1.html">Click Here</a>
-            </article>
-        </section>
+            <section class="col-md-6">
+                <article class="task-wrapper">
+                    <h4>Task 2:</h4>
+                    <p>Fulfil the described task in <code>/Tasks/Task_2/Task_2_Requirements.md</code></p>
+                    <p>Write your code in <code>/src/scripts/tasks/task2.js</code></p>
+                    <p>To view your console output open developer tools with F12 and choose tab "Console"</p>
+                </article>
 
-        <section class="col-md-6">
-            <article class="task-wrapper">
-                <h4>Task 2:</h4>
-                <p>Fulfil the described task in <code>/Tasks/Task_2/Task_2_Requirements.md</code></p>
-                <p>Write your code in <code>/src/scripts/tasks/task2.js</code></p>
-                <p>To view your console output open developer tools with F12 and choose tab "Console"</p>
-            </article>
-            <article class="task-wrapper">
-                <h4>Task 3:</h4>
-                <p>Fulfil the described task in <code>/Tasks/Task_3/Task_3_Requirements.md</code></p>
-                <p>Write your code in <code>/src/scripts/tasks/task3.js</code></p>
-                <p>To view your console output open developer tools with F12 and choose tab "Console"</p>
-            </article>
-        </section>
+            </section>
+        </div>
+        <div class="row">
+            <section class="col-md-6">
+                <article class="task-wrapper">
+                    <h4>Task 3:</h4>
+                    <p>Fulfil the described task in <code>/Tasks/Task_3/Task_3_Requirements.md</code></p>
+                    <p>Write your code in <code>/src/scripts/tasks/task3.js</code></p>
+                    <p>To view your console output open developer tools with F12 and choose tab "Console"</p>
+                </article>
+            </section>
+            <section class="col-md-6">
+                <article class="task-wrapper">
+                    <h4>Task 4:</h4>
+                    <p>Fulfil the described task in <code>/Tasks/Task_4/Task_4_Requirements.md</code></p>
+                    <p>Write your code in <code>/src/scripts/tasks/task4.js</code></p>
+                    <p>To view your console output open developer tools with F12 and choose tab "Console"</p>
+                </article>
+            </section>
+        </div>
+
     </main>
 </body>
 </html>
