Added Task 5 & 6 Requirements

--- a/src/index.html
+++ b/src/index.html
@@ -67,6 +67,24 @@
                 </article>
             </section>
         </div>
+        <div class="row">
+            <section class="col-md-6">
+                <article class="task-wrapper">
+                    <h4>Task 5:</h4>
+                    <p>Fulfil the described task in <code>/Tasks/Task_5/Task_5_Requirements.md</code></p>
+                    <p>Write your code in <code>/src/scripts/tasks/task5.js</code></p>
+                    <p>To view your console output open developer tools with F12 and choose tab "Console"</p>
+                </article>
+            </section>
+            <section class="col-md-6">
+                <article class="task-wrapper">
+                    <h4>Task 6:</h4>
+                    <p>Fulfil the described task in <code>/Tasks/Task_4/Task_6_Requirements.md</code></p>
+                    <p>Write your code in <code>/src/scripts/tasks/task6.js</code></p>
+                    <p>To view your console output open developer tools with F12 and choose tab "Console"</p>
+                </article>
+            </section>
+        </div>
 
     </main>
 </body>
