--- a/src/index.html
+++ b/src/index.html
@@ -85,6 +85,24 @@
                 </article>
             </section>
         </div>
+        <div class="row">
+            <section class="col-md-6">
+                <article class="task-wrapper">
+                    <h4>Task 7:</h4>
+                    <p>Fulfil the described task in <code>/Tasks/Task_7/Task_7_Requirements.md</code></p>
+                    <p>Write your code in <code>/src/scripts/tasks/task7.js</code></p>
+                    <p>To view your console output open developer tools with F12 and choose tab "Console"</p>
+                </article>
+            </section>
+            <section class="col-md-6">
+                <article class="task-wrapper">
+                    <h4>Task 8:</h4>
+                    <p>Fulfil the described task in <code>/Tasks/Task_4/Task_8_Requirements.md</code></p>
+                    <p>Write your code in <code>/src/scripts/tasks/task8.js</code></p>
+                    <p>To view your console output open developer tools with F12 and choose tab "Console"</p>
+                </article>
+            </section>
+        </div>
 
     </main>
 </body>
