--- a/src/index.html
+++ b/src/index.html
@@ -103,6 +103,33 @@
                 </article>
             </section>
         </div>
+        <div class="row">
+            <section class="col-md-6">
+                <article class="task-wrapper">
+                    <h4>Task 9:</h4>
+                    <p>Fulfil the described task in <code>/Tasks/Task_9/Task_9_Requirements.md</code></p>
+                    <p>Write your code in <code>/src/scripts/tasks/task9.js</code></p>
+                    <p>To view your console output open developer tools with F12 and choose tab "Console"</p>
+
+                    <ul>
+                        <li>
+                            <p>See wireframes in <code>~/Tasks/Task_9/task9_example.png</code></p>
+                        </li>
+                        <li>
+                            <p>Add your <code>HTML</code> code in <code>src/views/task9.html</code></p>
+                        </li>
+                        <li>
+                            <p>Your <code>CSS/Sass</code> in <code>src/styles/views/task9.scss</code></p>
+                        </li>
+                    </ul>
+
+                    <p class="view-page">
+                        To view your page
+                        <a href="/views/task9.html">click here</a>
+                    </p>
+                </article>
+            </section>
+        </div>
 
     </main>
 </body>
