Fixed Task2. Added Task 10 requirements + Siema Slider dependency in package.json

--- a/src/index.html
+++ b/src/index.html
@@ -128,6 +128,26 @@
                         <a href="/views/task9.html">click here</a>
                     </p>
                 </article>
+                <article class="task-wrapper">
+                    <h4>Task 10:</h4>
+                    <p>Fulfil the described task in <code>/Tasks/Task_10/Task_10_Requirements.md</code> adding a carousel to your Task 1 page.</p>
+                    <p>Write your code in <code>/src/scripts/tasks/task10.js</code></p>
+                    <p>To view your console output open developer tools with F12 and choose tab "Console"</p>
+
+                    <ul>
+                        <li>
+                            <p>Add your <code>HTML</code> code in <code>src/views/task1.html</code></p>
+                        </li>
+                        <li>
+                            <p>Your <code>CSS/Sass</code> in <code>src/styles/views/task1.scss</code></p>
+                        </li>
+                    </ul>
+
+                    <p class="view-page">
+                        To view your page
+                        <a href="/views/task1.html">click here</a>
+                    </p>
+                </article>
             </section>
         </div>
 
