Fixed Task 9 and 10 loading from index. Added Project Banner. Build Included

--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,9 @@
     <title>USSBG Frontend Intern Tasks</title>
     <link rel="icon" href="public/img/uniqa_favicon.ico" type="image/x-icon"/>
 </head>
-<body>
+<body class="body-home">
     <header>
-        <h1>Welcome to the Frontend Intern Training Project</h1>
+        <img class="uniqa-banner" src="../public/img/ussbg-frontend-internship-banner.png" alt="">
     </header>
 
     <main class="homepage">
@@ -34,7 +34,7 @@
 
                     <p class="view-page">
                         To view your page
-                        <a href="/views/task1.html">click here</a>
+                        <a href="./views/task1.html">click here</a>
                     </p>
                 </article>
             </section>
@@ -125,12 +125,16 @@
 
                     <p class="view-page">
                         To view your page
-                        <a href="/views/task9.html">click here</a>
+                        <a href="./views/task9.html">click here</a>
                     </p>
                 </article>
+
+            </section>
+            <section class="col-md-6">
                 <article class="task-wrapper">
                     <h4>Task 10:</h4>
-                    <p>Fulfil the described task in <code>/Tasks/Task_10/Task_10_Requirements.md</code> adding a carousel to your Task 1 page.</p>
+                    <p>Fulfil the described task in <code>/Tasks/Task_10/Task_10_Requirements.md</code> adding a
+                        carousel to your Task 1 page.</p>
                     <p>Write your code in <code>/src/scripts/tasks/task10.js</code></p>
                     <p>To view your console output open developer tools with F12 and choose tab "Console"</p>
 
@@ -145,7 +149,7 @@
 
                     <p class="view-page">
                         To view your page
-                        <a href="/views/task1.html">click here</a>
+                        <a href="./views/task1.html">click here</a>
                     </p>
                 </article>
             </section>
