Fixed banner img path

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="body-home">
     <header>
-        <img class="uniqa-banner" src="../public/img/ussbg-frontend-internship-banner.png" alt="">
+        <img class="uniqa-banner" src="./public/img/ussbg-frontend-internship-banner.png" alt="">
     </header>
 
     <main class="homepage">
